--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: BY Blog
+title: 陈剑的Blog
 SEOTitle: 陈剑的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: 350306878@qq.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 陈剑的博客, Neptune, 陈剑, iOS, Apple, iPhone"
 url: "http://qiubaiying.github.io"          # your host, for absolute URL
