--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 陈剑的Blog
 SEOTitle: 陈剑的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: 350306878@qq.com
-description: "Every failure is leading towards success."
+description: "莫忘少年凌云志 曾许天下第一流"
 keyword: "BY, BY Blog, 陈剑的博客, Neptune, 陈剑, iOS, Apple, iPhone"
 url: "http://qiubaiying.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
@@ -78,7 +78,7 @@ ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-ga_domain: qiubaiying.top               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
+ga_domain: chenjian.online               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
 
 
 
