--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 陈剑的Blog
 SEOTitle: 陈剑的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
-email: 350306878@qq.com
+email: corder@chenjian.online
 description: "莫忘少年凌云志 曾许天下第一流"
 keyword: "BY, BY Blog, 陈剑的博客, Neptune, 陈剑, iOS, Apple, iPhone"
 url: "http://chenjian.online"          # your host, for absolute URL
