--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 陈剑的Blog
-SEOTitle: 陈剑的博客 | BY Blog
+SEOTitle: 陈剑的个站 | My Blog
 header-img: img/post-bg-desk.jpg
 email: corder@chenjian.online
 description: "莫忘少年凌云志 曾许天下第一流"
