--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: MX Blog
+title: 王明晓 Blog
 SEOTitle: 王明晓的个人网站 | MX Blog
 header-img: img/post-bg-desk.jpg
 email: qiubaiying@gmail.com
