--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 王明晓 Blog
 SEOTitle: 王明晓的个人网站 | MX Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/post-bg-miui6.jpg
 email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
