--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 陈剑的个站 | My Blog
 header-img: img/post-bg-desk.jpg
 email: corder@chenjian.online
 description: "莫忘少年凌云志 曾许天下第一流"
-keyword: "BY, BY Blog, 陈剑的博客, Neptune, 陈剑, iOS, Apple, iPhone"
+keyword: " 陈剑的博客, Neptune, 陈剑, 微信小程序, 产品经理, 安卓开发"
 url: "http://chenjian.online"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
