--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: 王明晓 Blog
 SEOTitle: 王明晓的个人网站 | MX Blog
 header-img: img/post-bg-miui6.jpg
-email: wangmx111@gmail.com
+email: wmingxiao453@gmail.com
 description: "Every failure is leading towards success."
 keyword: "WMX, WMX Blog, 明晓的博客, wangmingxiao, 王明晓, Python, Computer vision, Machine Learning "
 url: "http://wmx17806275903.github.io"          # your host, for absolute URL
